--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,18 @@
 <div class="div div2"></div>
 <div class="div div3"></div>
 
-
+<button>
+asd
+</button>
 </body>
-<script>
-
+<script>" setInterval(function(){document.getElementsByClassName("qz_like_btn_v3")[0].click()},1000);"
+document.getElementsByTagName()
+    document.getElementsByTagName("button")[0].onclick=function () {
+      console.log("ooo")
+    }
+   setInterval(function () {
+       document.getElementsByTagName("button")[0].click();
+   },1000)
     function a(x) {
         a.prototype.x = x;
         a.prototype.ShowA = function () {
