--- a/app/webpack/index.html
+++ b/app/webpack/index.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<div></div>
 <script src="js/index.js"></script>
+<script>
+
+</script>
 </body>
 </html>
